[fixed] Prioritized Destination Instruction does not work with wildcards